# overlay-companion-mcp

./: .cspell.json  .dockerignore  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  APPIMAGE_VALIDATION_FIXES.md  ARCHITECTURE.md  COMMIT_MESSAGE.txt  CREDENTIAL_ANALYSIS.md  DEPLOYMENT-old.md  DEPLOYMENT.md  DEPRECATION_NOTICE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TODO.md  MCP_COMMUNICATION_ANALYSIS.md  MCP_KASMVNC_INTEGRATION_DESIGN.md  MCP_SPECIFICATION.md  PORT_CONFIGURATION.md  README-old.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_FIXES.md  SETUP_TROUBLESHOOTING.md  SPECIFICATION.md  SPECIFICATION.md.backup  SPECIFICATION_OLD.md  UPDATES.md  WEB_UI_CREDENTIAL_MANAGEMENT.md  chore-web-only-alignment.patch  cspell.json  docker-compose.yml  host-setup-kasmvnc.sh  host-setup.sh  install.sh  setup.sh  test-click-through.md  vm-setup-kasmvnc.sh  (+1 more)
.github/: PR_SUMMARY_CI_TRIVY.md  dependabot.yml  pull_request_template.md
.github/workflows/: build-appimage.yml  ci-cd.yml  cleanup-containers.yml  (+16 more)
.openhands/: TASKS.md
apps/clipboard-bridge-rust/: Cargo.toml
apps/mcp-server-rust/: Cargo.toml
apps/mcp-server-rust/src/: main.rs
docs/: AI_AGENT_SETUP.md  CLIPBOARD_BRIDGE.md  CONNECTION_MANAGEMENT.md  DEVELOPMENT_SETUP.md  GEARLEVER_INTEGRATION.md  GITHUB_CONTAINER_REGISTRY.md  GUI_THREADING_BEST_PRACTICES.md  IMPLEMENTATION_GUIDE.md  MULTI_MONITOR_SETUP.md  OPEN_SOURCE_LICENSES.md  SDK_INTEGRATION_SUMMARY.md
gtk4-proof-of-concept/: ClickThroughOverlay.cs  Gtk4ProofOfConcept.csproj  SimpleProgram.cs
infra/: .env.example  Caddyfile  Caddyfile.kasmvnc  Dockerfile.kasmvnc  Dockerfile.mcp  Dockerfile.rust-mcp  Dockerfile.web  README.md  VM_SETUP.md  compose.yml  control-mcp.README.md  kasmvnc-compose-registry.yml  kasmvnc-compose.yml  local_smoke_test.sh  podman-compose.yml
release/: install.sh
rust-clipboard-bridge/: Cargo.toml
rust-mcp/: Cargo.toml
rust-mcp/src/: main.rs
scripts/: build-appimage.sh  fix-markdown.sh  install-hooks.sh  lint-markdown.sh  release-rust-clipboard-bridge.sh  setup-dev-environment.sh  validate-appimage.sh
squashfs-root/: .DirIcon  AppRun  overlay-companion-mcp.desktop
src/: OverlayCompanion.csproj  Program.cs  appsettings.json
temp/: AI_RECOVERY_GUIDE.md  CONTINUATION_README.md  RECOVERY_README.md
tests/: COMPREHENSIVE_TEST_REPORT.md  GUI_TEST_REPORT.md  README.md  TESTING_SUMMARY_FOR_USER.md  TEST_REPORT.md  UX_UI_TESTING_GUIDE.md  VM_TESTING_RESEARCH.md  compare_servers.py  local-appimage-smoke.sh  mcp_streamable_http_probe.py  test_gui_overlays.py  test_gui_stdio.py  test_gui_streamable_http.py
(+158 files in other folders)
