[package]
name = "overlay-companion-mcp"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Overlay Companion MCP server"

[dependencies]
rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[build-dependencies]

[features]

[[bin]]
name = "overlay-companion-mcp"
path = "src/main.rs"

[workspace]
