[package]
name = "clipboard-bridge"
version = "0.1.0"
edition = "2021"
description = "Rust HTTP service to read/write VM clipboard for Overlay Companion MCP"
license = "GPL-3.0-or-later"
keywords = ["clipboard", "wayland", "x11", "http", "service"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
which = "6"
thiserror = "1"
async-process = "2"
futures-lite = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[[bin]]
name = "clipboard-bridge"
path = "src/main.rs"
