[package]
name = "overlay-companion-mcp"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Overlay Companion MCP server"

[dependencies]
axum = { version = "0.8" }

rmcp = { version = "0.12.0", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]

[build-dependencies]

[features]

[[bin]]
name = "overlay-companion-mcp"
path = "src/main.rs"

[workspace]
